<?xml version="1.0"?>
<package>
  <name>isr_m2_ros1_driver</name>
  <version>0.1.0</version>
  <description>The isr_m2_ros1_driver package</description>
  <license>BSD</license>
  <url type="website">https://gitlab.com/isr-ku/ros1/isr_m2</url>
  <author email="donggeun.cha@gmail.com">Donggeun Cha</author>
  <maintainer email="donggeun.cha@gmail.com">Donggeun Cha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
  </export>
</package>
