<?xml version="1.0"?>
<package format="2">
  <name>isr_m3_bringup</name>
  <version>0.0.0</version>
  <description>The ISR M3 bringup package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>isr_m3_base</depend>
  <export>
  </export>
</package>