<?xml version="1.0"?>
<package format="2">
  <name>isr_m3_description</name>
  <version>0.0.0</version>
  <description>The ISR M3 descroption package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>