<?xml version="1.0"?>
<package format="2">
  <name>isr_m4</name>
  <version>0.0.0</version>
  <description>The ISR-M4 bringup package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  
  <depend>isr_m4_base</depend>
  <depend>isr_m4_tools</depend>

  <depend>xsens_mti_driver</depend>
  <depend>zed2_ros_tools</depend>
  <depend>realsense_ros_tools</depend>
  <depend>velodyne_ros_tools</depend>

  <depend>keyboard</depend>
  
  <export>
  </export>
</package>