<?xml version="1.0"?>
<package format="2">
  <name>isr_m4_tools</name>
  <version>0.0.0</version>
  <description>ISR-M4 tools Package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <export>
  </export>
</package>